[gd_scene load_steps=10 format=3 uid="uid://c3egu4d7al8p5"]

[ext_resource type="Script" path="res://scripts/two_layer_fcnn.gd" id="1_kx66o"]
[ext_resource type="Script" path="res://scripts/title_bar.gd" id="1_q0ivf"]
[ext_resource type="Script" path="res://scripts/graph_rect.gd" id="2_mochg"]
[ext_resource type="Texture2D" uid="uid://cw12ybwxr01c6" path="res://images/refresh_black.png" id="3_w4rh8"]
[ext_resource type="Texture2D" uid="uid://de8wxwb51hp20" path="res://images/refresh_gray.png" id="4_7yur2"]
[ext_resource type="Texture2D" uid="uid://bmecfrrre8ota" path="res://images/first_page_black.png" id="5_ufn50"]
[ext_resource type="Texture2D" uid="uid://ce4djqudjcgih" path="res://images/first_page_gray.png" id="6_bm0sh"]
[ext_resource type="Texture2D" uid="uid://blf0d7a1kv51j" path="res://images/play_arrow_black.png" id="7_36rje"]
[ext_resource type="Texture2D" uid="uid://hgvvxc6obbow" path="res://images/play_arrow_gray.png" id="8_2x86o"]

[node name="TwoLayer_FCNN" type="Node2D"]
script = ExtResource("1_kx66o")

[node name="BG" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 900.0
color = Color(0.941176, 0.941176, 0.941176, 1)

[node name="TitleBar" type="ColorRect" parent="."]
offset_right = 500.0
offset_bottom = 48.0
script = ExtResource("1_q0ivf")

[node name="Label" type="Label" parent="TitleBar"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "２入力２層ニューロン"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItrLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 55.0
offset_right = 105.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "iteration: 0"

[node name="AfLabel" type="Label" parent="."]
offset_left = 200.0
offset_top = 55.0
offset_right = 480.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "actv-func: tanh(), -1 for false"
horizontal_alignment = 2

[node name="OpeButton" type="OptionButton" parent="."]
offset_left = 160.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
selected = 0
item_count = 10
popup/item_0/text = "AND"
popup/item_1/text = "OR"
popup/item_1/id = 1
popup/item_2/text = "NAND"
popup/item_2/id = 2
popup/item_3/text = "NOR"
popup/item_3/id = 3
popup/item_4/text = "X1>X2"
popup/item_4/id = 4
popup/item_5/text = "X1<X2"
popup/item_5/id = 5
popup/item_6/text = "X1>0"
popup/item_6/id = 6
popup/item_7/text = "X2>0"
popup/item_7/id = 7
popup/item_8/text = "XOR"
popup/item_8/id = 8
popup/item_9/text = "NXOR"
popup/item_9/id = 9

[node name="Label" type="Label" parent="OpeButton"]
layout_mode = 0
offset_left = -132.0
offset_right = -6.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "teacher func op:"
horizontal_alignment = 2

[node name="GraphRect1" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 150.0
offset_right = 330.0
offset_bottom = 470.0
script = ExtResource("2_mochg")

[node name="GraphRect2" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 490.0
offset_right = 330.0
offset_bottom = 810.0
script = ExtResource("2_mochg")

[node name="HBC" type="HBoxContainer" parent="."]
offset_top = 830.0
offset_right = 500.0
offset_bottom = 880.0
theme_override_constants/separation = 150
alignment = 1

[node name="ResetButton" type="TextureButton" parent="HBC"]
layout_mode = 2
texture_normal = ExtResource("3_w4rh8")
texture_pressed = ExtResource("4_7yur2")

[node name="Label" type="Label" parent="HBC/ResetButton"]
layout_mode = 0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "reset"
horizontal_alignment = 1

[node name="RewindButton" type="TextureButton" parent="HBC"]
layout_mode = 2
texture_normal = ExtResource("5_ufn50")
texture_pressed = ExtResource("6_bm0sh")

[node name="Label" type="Label" parent="HBC/RewindButton"]
layout_mode = 0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "rewind"
horizontal_alignment = 1

[node name="TrainButton" type="TextureButton" parent="HBC"]
layout_mode = 2
texture_normal = ExtResource("7_36rje")
texture_pressed = ExtResource("8_2x86o")

[node name="Label" type="Label" parent="HBC/TrainButton"]
layout_mode = 0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "train"
horizontal_alignment = 1
